Thu Mar 17 21:24:52 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* array.c (rb_ary_max, rb_ary_min): implement a block by itself instead
	  of delegating Enumerable#max/min.

Thu Mar 17 21:09:34 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* array.c (rb_ary_max, rb_ary_min): Array#max and Array#min added.
	  [Feature #12172]

	* internal.h (OPTIMIZED_CMP): moved from enum.c so that array.c can
	  use it.

	* test/ruby/test_array.rb (test_max, test_min): tests for Array#max
	  and Array#min.

	* test/ruby/test_enum.rb (test_max, test_min): revised a bit to test
	  Enumerable#max and #min explicitly.

Thu Mar 17 21:02:42 2016  Yusuke Endoh  <mame@ruby-lang.org>

	* internal.c: struct cmp_opt_data added for refactoring out a data
	  structure for CMP_OPTIMIZABLE

	* array.c (struct ary_sort_data): use struct cmp_opt_data.

	* enum.c (struct min_t, max_t, min_max_t): use struct cmp_opt_data.

Thu Mar 17 20:55:21 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (ary_inject_op): Extracted from enum_inject.

Thu Mar 17 18:39:04 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Implement the specialized code for sum of
	  integers including Bignums.

	* internal.h (rb_fix_plus): Declared to be usable from enum_inject.

	* numeric.c (rb_fix_plus): Defined.

Thu Mar 17 17:20:28 2016  Anton Davydov  <antondavydov.o@gmail.com>

	* thread_sync.c: [DOC] Update documentation for Queue class
	  description.  [Fix GH-1292]

Thu Mar 17 17:14:51 2016  Dinar Valeev  <dvaleev@suse.com>

	* gc.c (tick): Use __builtin_ppc_get_timebase for POWER arch.
	  [Fix GH-1291]

Thu Mar 17 11:51:48 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/securerandom.rb (gen_random): to avoid blocking on Windows.
	  On Windows OpenSSL RAND_bytes (underlying implementation is
	  RAND_poll in crypto/rand/rand_win.c) may be blocked at
	  NetStatisticsGet.
	  https://wiki.openssl.org/index.php/Random_Numbers#Windows_Issues
	  Instead of this, use Random.raw_seed directory (whose implementation